<?xml version="1.0"?>
<package format="2">
  <name>gazebo_depth_camera_tests</name>
  <version>0.0.1</version>
  <description>Tests of depth camera simulation in Gazebo</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
